[tool.poetry]
name = "adventofcode-2023"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"
packages = [{include = "adventofcode_2023"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
mypy = "^1.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
